# containr

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codex-infos-and-rules.md  codex_macbook.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ai-agents.md  code-map-ui.md  concept-ai-templates.md  concept-command-placeholders.md  concept-stack-update.md  concept-stacks-templates.md  docs-status.md  features-status.md  overview.md  plan-stack-update-mvp.md  readability-refactor-pr-plan.md  registry_auth.md  release-prep.md  release_plan_security.md  roadmap-priorities.md  testing-approach.md  testing-checklist.md  ui-logic-separation-plan.md  ui_mod_refactor_plan.md  ui_refactor_plan.md  user_guide.md  user_guide_de.md  user_guide_en.de
src/: app_meta.rs  config.rs  docker.rs  main.rs  runner.rs  shell_parse.rs  ssh.rs
themes/: 0x96f.json  12-bit Rainbow.json  3024 Day.json  Abernathy.json  Adventure Time.json  Adwaita Dark.json  Afterglow.json  Apple Classic.json  Arcoiris.json  Ardoise.json  Atelier Sulphurpool.json  Atom One Dark.json  Atom.json  Ayu Light.json  Ayu Mirage.json  Birds Of Paradise.json  Black Metal (Bathory).json  Black Metal (Burzum).json  Black Metal (Gorgoroth).json  Black Metal (Khold).json  Black Metal (Marduk).json  Black Metal (Nile).json  Black Metal (Venom).json  Black Metal.json  Bluloco Light.json  Borland.json  Bright Lights.json  Broadcast.json  Builtin Tango Light.json  C64.json  Catppuccin Macchiato.json  Chalk.json  Chalkboard.json  Cobalt Neon.json  Cobalt Next Dark.json  (+174 more)
(+437 files in other folders)
