[package]
name = "containr"
version = "0.4.27"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time", "process", "sync"] }
