[package]
name = "containr"
version = "0.4.155"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
image = { version = "0.25.9", default-features = false }
ratatui = "0.29.0"
ratatui-image = { version = "8.0.1", default-features = false, features = ["crossterm"] }
regex = "1.11.1"
age = { version = "0.11.0", features = ["armor"] }
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
tempfile = "3.10.1"
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time", "process", "sync"] }
uuid = { version = "1.12.1", features = ["v4"] }
keyring = "2.3.3"

[features]
integration = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
